# integrations

protocol/ipfs/http-wrapper/: Dockerfile  package.json  polywrap.build.yaml  polywrap.yaml
protocol/ipfs/http-wrapper/oldsrc/: index.ts
protocol/ipfs/http-wrapper/oldsrc/__tests__/e2e/: e2e.spec.ts
protocol/ipfs/http-wrapper/src/: index.ts
protocol/ipfs/rust-http-wrapper/: .gitignore  Dockerfile  package.json
system/http/rs/: Cargo.toml  jest.config.js  package.json  polywrap.test.yaml  schema.graphql
system/http/rs/examples/: get.rs
system/http/rs/src/: lib.rs
system/http/rs/src/__tests__/: http.spec.ts
system/http/rs/workflows/: e2e.yaml  validator.cue
