[package]
name = "cesar-http-wrapper"
version = "0.0.1"
description = "Wrapper to interact with IPFS through Http"
repository = "https://github.com/polywrap/integrations"
license = "MIT"
edition = "2021"

[dependencies]
reqwest = "0.11.11"
futures = "0.3"
polywrap-wasm-rs = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
